# recipe-mcp-server

./: .editorconfig  .env.example  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  lefthook.yml  pyproject.toml  renovate.json
.beads/: .beads-credential-key  metadata.json
.claude/rules/: no-linter-suppression.md  no-main-commits.md
.config/: .markdownlint-cli2.jsonc  checkov.yml  hadolint.yaml  lefthook.yml  osv-scanner.toml  prettierrc.json  taplo.toml  yamllint.yml
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
migrations/: env.py
migrations/versions/: 89c5e1acdef7_initial_schema.py  a3f2b1c8d9e0_add_calorie_target_and_day_dates.py
scripts/: seed_db.py
src/recipe_mcp_server/: __init__.py  __main__.py  config.py  exceptions.py  server.py
src/recipe_mcp_server/auth/: __init__.py  provider.py
src/recipe_mcp_server/cache/: __init__.py  client.py  decorators.py  keys.py
src/recipe_mcp_server/clients/: __init__.py  base.py  dummyjson.py  foodish.py  openfoodfacts.py  spoonacular.py  themealdb.py  usda.py
src/recipe_mcp_server/composition/: __init__.py  nutrition_server.py
src/recipe_mcp_server/db/: __init__.py  engine.py  repository.py  tables.py
src/recipe_mcp_server/elicitation/: __init__.py  handlers.py  schemas.py
src/recipe_mcp_server/middleware/: __init__.py  error_handler.py  rate_limiter.py  validators.py  write_scope.py
src/recipe_mcp_server/models/: __init__.py  common.py  meal_plan.py  nutrition.py  recipe.py  user.py
src/recipe_mcp_server/observability/: __init__.py  audit.py  logging.py  tracing.py
src/recipe_mcp_server/prompts/: __init__.py  completion.py  cooking_prompts.py  dietary_prompts.py  meal_plan_prompts.py  recipe_prompts.py
src/recipe_mcp_server/resources/: __init__.py  blob_resources.py  dynamic_resources.py  static_resources.py  subscriptions.py  ui_resources.py
src/recipe_mcp_server/sampling/: __init__.py  handlers.py
src/recipe_mcp_server/services/: __init__.py  conversion_service.py  meal_plan_service.py  nutrition_service.py  recipe_service.py  shopping_service.py
src/recipe_mcp_server/tools/: __init__.py  meal_plan_tools.py  nutrition_tools.py  recipe_tools.py  seasonal.py  utility_tools.py
tests/: conftest.py
tests/e2e/: conftest.py  test_elicitation_flow.py  test_health_endpoint.py  test_http_transport.py  test_mcp_lifecycle.py  test_sampling_flow.py
tests/factories/: recipe_factory.py  user_factory.py
tests/fixtures/api_responses/dummyjson/: list.json  recipe.json  tag.json  tags.json
tests/fixtures/api_responses/foodish/: category.json  random.json
tests/fixtures/api_responses/openfoodfacts/: product.json  search.json
tests/fixtures/api_responses/spoonacular/: convert.json  meal_plan.json  nutrition.json  recipe_info.json  search.json  similar.json  substitutes.json  wine_pairing.json
tests/fixtures/api_responses/themealdb/: areas.json  categories.json  filter.json  lookup.json  search.json
tests/fixtures/api_responses/usda/: food.json  search.json
tests/integration/: conftest.py  test_audit_trail.py  test_cache_behavior.py  test_otel_spans.py  test_tool_service_flow.py
tests/performance/: locustfile.py
tests/protocol/: conftest.py  test_cancellation.py  test_composition.py  test_conformance.py  test_pagination.py  test_primitive_discovery.py  test_progress.py  test_seasonal_visibility.py  test_server_logging.py  test_session_state.py  test_subscriptions.py
tests/unit/: test_base_client.py  test_cache.py  test_config.py  test_models.py  test_prompts.py  test_repository.py  test_resources.py  test_tools.py
tests/unit/clients/: test_dummyjson.py  test_foodish.py  test_openfoodfacts.py  test_spoonacular.py  test_themealdb.py  test_usda.py
tests/unit/elicitation/: test_handlers.py  test_schemas.py
tests/unit/resources/: test_blob_resources.py  test_ui_resources.py
tests/unit/sampling/: test_handlers.py
tests/unit/services/: conftest.py  test_conversion_service.py  test_meal_plan_service.py  test_nutrition_service.py  test_recipe_service.py  test_shopping_service.py
