[project]
dependencies = [
  "fastmcp>=3.1.1",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "httpx>=0.28",
  "redis[hiredis]>=5.0",
  "structlog>=25.0",
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
  "opentelemetry-exporter-otlp>=1.30",
  "tenacity>=9.0",
  "Pillow>=11.0",
]
description = "Production-ready MCP server for recipe management, nutrition analysis, and meal planning"
license = "MIT"
name = "recipe-mcp-server"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "respx>=0.22",
  "fakeredis>=2.26",
  "polyfactory>=2.18",
  "ruff>=0.9",
  "mypy>=1.14",
  "pip-audit>=2.7",
  "bandit>=1.8",
  "locust>=2.32",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: Unit tests",
  "integration: Integration tests (requires Redis)",
  "e2e: End-to-end MCP protocol tests",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
ignore = ["UP046"]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"
strict = true

[tool.coverage.run]
branch = true
source = ["src/recipe_mcp_server"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__"]
fail_under = 85
