[project]
dependencies = [
  "fastmcp>=3.1.1",
  "sqlalchemy[asyncio]>=2.0.48",
  "aiosqlite>=0.22",
  "alembic>=1.18",
  "pydantic>=2.12",
  "pydantic-settings>=2.13",
  "httpx>=0.28",
  "redis[hiredis]>=7.3",
  "structlog>=25.5",
  "opentelemetry-api>=1.40",
  "opentelemetry-sdk>=1.40",
  "opentelemetry-exporter-otlp>=1.40",
  "tenacity>=9.1",
  "Pillow>=12.1",
]
description = "Production-ready MCP server for recipe management, nutrition analysis, and meal planning"
license = "MIT"
name = "recipe-mcp-server"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "fastmcp[tasks]>=3.1.1",
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7.0",
  "respx>=0.22",
  "fakeredis>=2.34",
  "polyfactory>=3.3",
  "ruff>=0.15",
  "mypy>=1.19",
  "bandit>=1.9",
  "locust>=2.43",
]
tasks = ["fastmcp[tasks]>=3.1.1"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: Unit tests",
  "integration: Integration tests (requires Redis)",
  "e2e: End-to-end MCP protocol tests",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
ignore = ["UP046"]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"
strict = true

[tool.coverage.run]
branch = true
source = ["src/recipe_mcp_server"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__"]
fail_under = 85
